# Android_Anti-Hcak_Inotify

./: CMakeLists.txt  README.md  readme.md
Cheating/: CMakeLists.txt  main.cpp
Inotify/: CMakeLists.txt  main.cpp
Inotify/include/: mlog.h
JniTest/: .gitignore
JniTest/app/: build.gradle
JniTest/app/src/main/: AndroidManifest.xml
JniTest/app/src/main/cpp/: CMakeLists.txt  log.h  test.cpp
JniTest/app/src/main/java/com/example/myapplication/: MainActivity.java
JniTest/gradle/wrapper/: gradle-wrapper.properties
outputs/arm64-v8a/: Cheating  Inotify
